syntax = "proto3";

package netbench;

service Netbench {
    rpc StartTest (EmptyRequest) returns (stream TestPacket) {}
    rpc SaveSettings(TestSettings) returns (SaveSettingsResponse) {}
    rpc GetSettings(EmptyRequest) returns (TestSettings) {}
}

message TestPacket {
    float time = 1;
    float bitsPerSecond = 2;
}

message TestSettings {
    string title = 1;
    repeated string tags = 2;
    string host = 3;
    int32 port = 4;
    float interval = 5;
    int32 duration = 6;
}

message SaveSettingsResponse {
   bool success = 1;
}

message EmptyRequest {}
